--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,35 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.booklist{
+  width: 90vw;
+  max-width: 1170px;
+  margin: 5rem auto;
+  display: grid;
+  gap: 2rem;
+
+}
+
+@media screen and (min-width:768px){
+  .booklist{
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.book{
+  background: #fff;
+  border-radius: 1rem;
+  padding: 1rem 2rem;
+}
+
+.book h1{
+  margin-top: 0.5rem;
+}
+
+.book h4{
+  color: rgb(0, 162, 255);
+  font-size: 0.75rem;
+  letter-spacing: 5px;
+  margin-top: 0.25rem;
+}
